Site header z-index fixes

--- a/assets/scss/components/header/_before-header.scss
+++ b/assets/scss/components/header/_before-header.scss
@@ -1,4 +1,5 @@
 .before-header {
+	z-index: 1;
 	width: 100%;
 	min-height: calc(var(--spacing) * 2);
 	font-size: var(--text-sm);
