--- a/assets/scss/components/menu/_nav.scss
+++ b/assets/scss/components/menu/_nav.scss
@@ -18,12 +18,19 @@
 }
 
 .nav-after-header {
+	z-index: 1;
 	width: 100%;
 
 	@include mq(lg) {
 		--menu-alignment: flex-start;
 		border-top: var(--nav-after-header-border-top, 0);
+		border-bottom: var(--nav-after-header-border-bottom, 0);
 	}
+}
+
+.has-transparent-header {
+	--nav-after-header-border-top: var(--border);
+	--nav-after-header-border-bottom: var(--border);
 }
 
 .nav-footer {
